# optilab

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  environment.yml  export.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  dockerhub.yml  push_docker.yml  pypi.yml
demo/: 01_performing_optimization.ipynb  02_creating_an_optimizer.ipynb  perform_optimization.ipynb  tutorial.ipynb
docs/: conf.py  function_properties.md  index.rst  modules.rst  optilab.cli.rst  optilab.data_classes.rst  optilab.functions.benchmarks.rst  optilab.functions.multimodal.rst  optilab.functions.rst  optilab.functions.surrogate.rst  optilab.functions.unimodal.rst  optilab.metamodels.rst  optilab.optimizers.rst  optilab.plotting.rst  optilab.rst  optilab.utils.rst
experiments/000_template/: README.md
experiments/001_reproduce_lmm_cma_es/: cmaes_variations.py  main.py
experiments/002_cmaes_knn_metamodel/: cmaes_variations.py  main.py
experiments/003_reproduce_lmm_cmaes/: README.md  main.py
sandbox/cmaes_armknn_cec2017/: main.py
sandbox/cmaes_cec2017/: cmaes_variations.py  main.py
sandbox/cmaes_on_cec2017/: cmaopts.json  config.py  main.py  results.json  run_cmaes_on_cec.py
sandbox/cmaes_vanilla_cec2017/: main.py  run_cmaes_on_cec.py
sandbox/differential_evolution/: differential_evolution.py
sandbox/lmm_cma_es/: main.py
src/: experiment_results.py  visualize.py
src/optilab/: __main__.py  cli.py
src/optilab/cli/: __init__.py
src/optilab/data_classes/: __init__.py  bounds.py  experiment_metadata.py  experiment_results.py  function_metadata.py  optimization_run.py  optimizer_metadata.py  point.py  point_list.py  results_json_schema.py
src/optilab/functions/: __init__.py  noisy_function.py  objective_function.py
src/optilab/metamodels/: __init__.py  approximate_ranking_metamodel.py  iepolation_surrogate.py  top_half_metamodel.py
src/optilab/objective_functions/: noisy_function.py
src/optilab/optimizers/: __init__.py  cma_es.py  ipop_cma_es.py  knn_cma_es.py  knn_ipop_cma_es.py  lmm_cma_es.py  lmm_ipop_cma_es.py  optimizer.py  top_half_knn_ipop_cma_es.py  top_half_polyreg_ipop_cma_es.py
src/optilab/plotting/: __init__.py  box_plot.py  convergence_curve.py  ecdf_curve.py
src/optilab/utils/: __init__.py  aggregate_pvalues.py  aggregate_stats.py  pickle_utils.py  stat_test.py
src/plotting/: convergence_curve.py  ecdf_curve.py
src/sofes/data_classes/: __init__.py  experiment_metadata.py  experiment_results.py
src/sofes/metamodels/: approximate_ranking_metamodel.py  locally_weighted_regression_metamodel.py
src/sofes/objective_functions/: __init__.py  ackley_function.py  cec2017_objective_function.py  knn_surrogate_objective_function.py  noisy_sphere_function.py  objective_function.py  rastrigin_function.py  rosenbrock_function.py  schwefel_function.py  sphere_function.py  surrogate_objective_function.py
src/sofes/plotting/: __init__.py  box_plot.py  ecdf_curve.py
tests/: test_dummy.py  test_knn_surrogate_objective_function.py  test_polynomial_regression.py
tests/data_classes/: test_bounds.py  test_point.py  test_point_list.py
(+47 files in other folders)
