[project]
authors = [
    { email = "marcin.lojek@pw.edu.pl", name = "mlojek" },
]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "black",
    "cma==4.0.0",
    "faiss-cpu",
    "isort",
    "jupyter",
    "matplotlib==3.9.2",
    "numpy==2.1.3",
    "opfunu==1.0.0",
    "pandas==2.2.3",
    "pre-commit",
    "pylint",
    "pyprojectsort",
    "pytest",
    "scikit-learn==1.5.2",
    "setuptools",
    "shapely==2.0.6",
    "sphinx",
    "sphinx-rtd-theme",
    "tabulate",
    "tqdm",
    "typing",
]
description = "Simple framework for optimization functions and metamodels"
name = "optilab"
readme = "README.md"
requires-python = ">=3.11.9"
version = "27"

[project.scripts]
optilab = "optilab.__main__:main"

[project.urls]
Homepage = "https://github.com/mlojek/optilab"

[tool.pylint]
disable = [
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-branches",
    "too-many-instance-attributes",
    "too-many-locals",
    "too-many-positional-arguments",
    "too-many-statements",
]
