[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pre-commit>=4.6.0",
    "pyprojectsort>=0.4.0",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
    "setuptools>=82.0.1",
    "sphinx-rtd-theme>=3.1.0",
    "sphinx>=9.0.4",
    "ty>=0.0.32",
]

[project]
authors = [
    { email = "marcin.lojek@pw.edu.pl", name = "mlojek" },
]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "cma==4.0.0",
    "faiss-cpu",
    "matplotlib==3.9.2",
    "numpy==2.1.3",
    "opfunu==1.0.0",
    "pandas==2.2.3",
    "scikit-learn==1.5.2",
    "shapely==2.0.6",
    "tabulate",
    "tqdm",
    "xgboost",
    "zstandard",
]
description = "Simple framework for optimization functions and metamodels"
name = "optilab"
readme = "README.md"
requires-python = ">=3.11.9"
version = "29"

[project.scripts]
optilab = "optilab.__main__:main"

[project.urls]
Homepage = "https://github.com/mlojek/optilab"
